content/_generated-doc/2.7/config/quarkus-datasource-data-sources-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-datasource-data-sources-build-time-config_configuration]]link:#quarkus-datasource-data-sources-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.db-kind]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.db-kind[quarkus.datasource.db-kind]`

[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.enabled[quarkus.datasource.devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.image-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.image-name[quarkus.datasource.devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.port]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.port[quarkus.datasource.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
 If not defined, the port will be chosen randomly.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health-exclude]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health-exclude[quarkus.datasource.health-exclude]`

[.description]
--
Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. 
 By default, the health check includes all configured data sources (if it is enabled).
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health.enabled[quarkus.datasource.health.enabled]`

[.description]
--
Whether or not an health check is published in case the smallrye-health extension is present. 
 This is a global setting and is not specific to a datasource.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.metrics.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.metrics.enabled[quarkus.datasource.metrics.enabled]`

[.description]
--
Whether or not datasource metrics are published in case a metrics extension is present. 
 This is a global setting and is not specific to a datasource. 
 NOTE: This is different from the "jdbc.enable-metrics" property that needs to be set on the JDBC datasource level to enable collection of metrics for that datasource.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.container-properties-container-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.container-properties-container-properties[quarkus.datasource.devservices.container-properties]`

[.description]
--
Generic properties that are passed for additional container configuration. 
 Properties defined here are database specific and are interpreted specifically in each database dev service implementation.
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.properties-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.properties-properties[quarkus.datasource.devservices.properties]`

[.description]
--
Generic properties that are added to the database connection URL.
--|`Map<String,String>` 
|


h|[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.db-kind]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.db-kind[quarkus.datasource."datasource-name".db-kind]`

[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.enabled[quarkus.datasource."datasource-name".devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.image-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.image-name[quarkus.datasource."datasource-name".devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.container-properties-container-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.container-properties-container-properties[quarkus.datasource."datasource-name".devservices.container-properties]`

[.description]
--
Generic properties that are passed for additional container configuration. 
 Properties defined here are database specific and are interpreted specifically in each database dev service implementation.
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.properties-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.properties-properties[quarkus.datasource."datasource-name".devservices.properties]`

[.description]
--
Generic properties that are added to the database connection URL.
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.port]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.port[quarkus.datasource."datasource-name".devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
 If not defined, the port will be chosen randomly.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.health-exclude]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.health-exclude[quarkus.datasource."datasource-name".health-exclude]`

[.description]
--
Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. 
 By default, the health check includes all configured data sources (if it is enabled).
--|boolean 
|`false`

|===